--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ navbar:
   title: "COVID-19 CBMDF"
   left:
   - text: "Home"
-   href: site.html
+   href: index.html
   - text: "Speed and Distance"
    href: site.html
 output:
